Add Filters, fix tests